# masters-ray-tracing-ocl

./: CMakeLists.txt  OCL.cpp  OCL.h  README.md  Sphere.hpp  config.yml  cornell_box.yaml  hittables.yml  main.cpp  opencl_kernel.cl  window.cpp
